# personal-finance

./: README.md  personal_finance.py  pyproject.toml
.github/workflows/: wf.yml
